0.26.0 (unreleased)
-------------------
 - **backwards-incompatible**: Zeep no longer sets a default cache backend.
   Please see http://docs.python-zeep.org/en/master/transport.html#caching for
   information about how to configure a cache.


0.25.0 (2017-01-23)
-------------------
 - **Important:** Add basic validation against the xsd. It currently will only
   validate the minOccurs/maxOccurs but this will be extended in the future.
 - Add support for duplicate namespace definitions. Previously imports for
   namespaces which were already imported were ignored. It will now search
   through all matching schemas with the tns to find a specific object (#204)
 - Fix xsd:extension for sequence -> choice. (#257)
 - Improve serializing attributes when the values were passed as a dict (#125)


0.24.0 (2016-12-16)
-------------------
 - Don't fail the parsing of responses if an xsi:type references an non-existing
   type. Instead log a message (#273)
 - Fix serializing etree.Element instances in the helpers.serialize function
   (#255)
 - Fix infinite loop during parsing of xsd.Sequence where max_occurs is 
   unbounded (#256)
 - Make the xsd.Element name kwarg required
 - Improve handling of the xsd:anyType element when passed instances of 
   complexType's (#252)
 - Silently ignore unsupported binding transports instead of an hard error 
   (#277)
 - Support microseconds for xsd.dateTime and xsd.Time (#280)
 - Don't mutate passed values to the zeep operations (#280)


0.23.0 (2016-11-24)
-------------------
 - Add Client.set_default_soapheaders() to set soapheaders which are to be used
   on all operations done via the client object.
 - Add basic support for asyncio using aiohttp. Many thanks to chrisimcevoy
   for the initial implementation! Please see 
   https://github.com/mvantellingen/python-zeep/pull/207 and
   https://github.com/mvantellingen/python-zeep/pull/251 for more information
 - Fix recursion error when generating the call signature (jaceksnet, #264)

