@@ -10,3 +10,15 @@ def xsi_ns(localname):
 
 def xsd_ns(localname):
     return etree.QName(NS_XSD, localname)
+
+
+class _StaticIdentity(object):
+    def __init__(self, val):
+        self.__value__ = val
+
+    def __repr__(self):
+        return self.__value__
+
+
+NotSet = _StaticIdentity('NotSet')
+SkipValue = _StaticIdentity('SkipValue')
