@@ -3,6 +3,8 @@
  - **backwards-incompatible**: Zeep no longer sets a default cache backend.
    Please see http://docs.python-zeep.org/en/master/transport.html#caching for
    information about how to configure a cache.
+ - Add ``zeep.xsd.SkipValue`` which instructs the serialize to ignore the 
+   element.
 
 
 0.25.0 (2017-01-23)
